--- a/Template.ipynb
+++ b/Template.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Template.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPmTqyzhbxGb0LLN7yrehx6",
+      "authorship_tag": "ABX9TyMqUfzrKafkSI7m0V+u2AcH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,30 +28,53 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "ZcVwwv6DWlH5",
-        "outputId": "de12ee83-e67f-4a7d-82be-8ba84085c01a"
+        "id": "hvpkN6mneALV"
       },
       "source": [
+        "#Template\n",
+        "\n",
+        "This is a template for the Group 9 analysis of small business during the Covid19 Pandemic. When starting a completely new analysis, please create a copy of this from the branch and rename it using analysis_name.ipynb format.\n",
+        "\n",
+        "It will be updated with common functions."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "r7vVVHzzhWeD"
+      },
+      "source": [
+        "#Setup"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "iDyFk_CaipGg"
+      },
+      "source": [
+        "**Mount Google Drive**\n",
+        "\n",
+        "To have access to the shared group 9 project folder, first create a shortcut to it in your drive. Then run the cell below to mount your google drive and follow the prompt to get the code."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ZcVwwv6DWlH5"
+      },
+      "source": [
+        "# Mount google drive\n",
+        "\n",
         "from google.colab import drive\n",
         "\n",
         "drive.mount('/content/gdrive')\n",
         "root_path = '/content/gdrive/MyDrive/Group 9 Project Documents'"
       ],
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Mounted at /content/gdrive\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -59,60 +82,44 @@
         "id": "9s6vQPjqYKRw"
       },
       "source": [
+        "# Imports\n",
+        "\n",
+        "import matplotlib.pyplot as plt\n",
+        "import numpy as np\n",
         "import pandas as pd"
       ],
       "execution_count": 4,
       "outputs": []
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "9agYzwa5Zbg6"
+        "id": "7v_U0BbDjgRo"
       },
       "source": [
-        "dictionary = pd.read_csv('/content/gdrive/MyDrive/Group 9 Project Documents/pulse2021_puf_36.csv')"
-      ],
-      "execution_count": 9,
-      "outputs": []
+        "---\n",
+        "# Common Functions\n"
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "a4KHTPoiaXCV",
-        "outputId": "4c6648a3-fa2e-47fa-93d3-43a9fbb83a96"
+        "id": "ASzgHP9bjyXm"
       },
       "source": [
-        "dictionary.head"
+        "def plot_stuff(x,y):\n",
+        "  \"\"\"\n",
+        "  Args\n",
+        "  x : \n",
+        "  y:\n",
+        "\n",
+        "  Returns:\n",
+        "  something\n",
+        "  \"\"\"\n",
+        "  raise NotImplementedError"
       ],
-      "execution_count": 10,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "<bound method NDFrame.head of                            SCRAM  WEEK  EST_ST  ...  PSWHYCHG8  PSWHYCHG9  INCOME\n",
-              "0      V360000001S30010264000112    36       1  ...        -88        -88     -88\n",
-              "1      V360000001S30011372510122    36       1  ...        -88        -88       2\n",
-              "2      V360000001S30011968410122    36       1  ...        -88        -88       5\n",
-              "3      V360000001S32011392710122    36       1  ...        -88        -88       4\n",
-              "4      V360000001S37010583600122    36       1  ...        -88        -88       3\n",
-              "...                          ...   ...     ...  ...        ...        ...     ...\n",
-              "69109  V369950006S11560023200022    36      56  ...        -88        -88       5\n",
-              "69110  V369950006S12560043400022    36      56  ...        -88        -88       1\n",
-              "69111  V369950006S12560749400012    36      56  ...        -88        -88       4\n",
-              "69112  V369950006S50560700110012    36      19  ...        -88        -88       3\n",
-              "69113  V369950006S52560912210012    36      56  ...        -88        -88     -88\n",
-              "\n",
-              "[69114 rows x 202 columns]>"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 10
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
