--- a/Complie_sbp.ipynb
+++ b/Complie_sbp.ipynb
@@ -6,8 +6,7 @@
       "name": "Complie_sbp.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyMenAg/RvH3mz//LoffR2HS",
+      "authorship_tag": "ABX9TyN3Vl9EbtXCbc/3uwlmFzqz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -943,6 +942,17 @@
       ]
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "id": "9onI2uwCj3sv"
+      },
+      "source": [
+        "df_index_all.to_csv(\"/content/drive/MyDrive/Group 9 Project Documents/Datasets/business_pulse/combined_indexes.csv\", index=False)"
+      ],
+      "execution_count": 24,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "qjo-wggKJFnD"
@@ -1299,6 +1309,17 @@
           "execution_count": 21
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "uQBSvGDYkhjO"
+      },
+      "source": [
+        "df_st_sector_all.to_csv(\"/content/drive/MyDrive/Group 9 Project Documents/Datasets/business_pulse/combined_state_sector.csv\", index=False)"
+      ],
+      "execution_count": 25,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
