added state key

--- a/Template.ipynb
+++ b/Template.ipynb
@@ -3,9 +3,10 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "Template.ipynb",
+      "name": "Copy of Template.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMqUfzrKafkSI7m0V+u2AcH",
+      "mount_file_id": "1f-VeuvGnnNaJvEoA8Zuc-pFrJF2PJG8C",
+      "authorship_tag": "ABX9TyOiBLUMBYYLYDAti6nARCoC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -24,7 +25,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/elizabethyoo/team_9/blob/main/Template.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/elizabethyoo/team_9/blob/update_template/Template.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -63,18 +64,29 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ZcVwwv6DWlH5"
+        "id": "ZcVwwv6DWlH5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "1e4cc4f3-e9e4-4ff4-8829-66560d539347"
       },
       "source": [
         "# Mount google drive\n",
         "\n",
         "from google.colab import drive\n",
         "\n",
-        "drive.mount('/content/gdrive')\n",
-        "root_path = '/content/gdrive/MyDrive/Group 9 Project Documents'"
+        "drive.mount('/content/gdrive')"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mounted at /content/gdrive\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -83,12 +95,11 @@
       },
       "source": [
         "# Imports\n",
-        "\n",
         "import matplotlib.pyplot as plt\n",
         "import numpy as np\n",
         "import pandas as pd"
       ],
-      "execution_count": 4,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -119,6 +130,19 @@
         "  raise NotImplementedError"
       ],
       "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "SCST5TTWMCcG"
+      },
+      "source": [
+        "root_path = '/content/gdrive/MyDrive/team_9/Datasets/'\n",
+        "states = pd.read_csv(root_path+'state_key.csv', dtype={\"ps_id\":str})\n",
+        "state_key = {key:value for (key,value) in zip(states.ps_id,states.abrv)}"
+      ],
+      "execution_count": 7,
       "outputs": []
     }
   ]
